--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,8 @@ spring:
       ddl-auto: none
       show-sql: true
 
-#api:
-#  security:
-#    token:
-#      secret: ${JWT_SECRET:123}
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:12345678}
+
